--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,9 +72,174 @@ body p {
   color: #454545;
 }
 
+.header__stats {
+  z-index: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: white;
+  position: absolute;
+  bottom: 0;
+  right: 35%;
+  padding-left: 2%;
+  padding-right: 2%;
+  width: 34%;
+}
+
+.header__stats--cont {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  padding: 4%;
+}
+
+.header__stats h2 {
+  font-size: 2.5em;
+  font-weight: 300;
+  padding: 0;
+  margin: 0;
+}
+
+.header__stats p {
+  font-size: 1em;
+  padding: 0;
+  margin: 0;
+}
+
+.header__arrow--red {
+  display: flex;
+  position: absolute;
+  z-index: 4;
+  background-color: #e4572e;
+  color: white;
+  font-size: 3em;
+  padding: 2.5%;
+  left: 63%;
+  bottom: 5%;
+  font-weight: 900;
+}
+
+.header__arrow--yellow {
+  display: flex;
+  position: absolute;
+  z-index: 3;
+  background-color: #f5d63d;
+  left: 64%;
+  bottom: 0%;
+  width: 8.3%;
+  height: 27%;
+}
+
+.header__title {
+  font-weight: 300;
+  margin-bottom: 1em;
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  flex-direction: column;
+  margin-left: 5%;
+  margin-bottom: 10%;
+}
+
+.header__title h1 {
+  font-size: 4em;
+  padding-bottom: 0;
+  margin: 0;
+  font-weight: 300;
+}
+
+.header__title p {
+  padding: 0;
+  margin: 0;
+  padding-top: 5%;
+}
+
+.location__description {
+  flex: 1;
+  padding: 2em;
+  margin-right: 2em;
+  align-content: center;
+}
+
+.location__description h2 {
+  font-size: 2em;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+
+.location__map--lightblue {
+  background-color: #3c91e6;
+  height: 12em;
+  width: 22em;
+  z-index: 1;
+}
+
+.location__map img {
+  width: 22em;
+  position: absolute;
+  bottom: -10%;
+  left: 33%;
+  z-index: 2;
+}
+
+.location__coffee-machine {
+  width: 30em;
+}
+
+.location__beans-content {
+  width: 7em;
+  height: 28em;
+  overflow: hidden;
+  position: absolute;
+  z-index: 4;
+  top: 77.3%;
+  left: 58%;
+}
+
+.location__coffee-beans {
+  width: 150%;
+  height: auto;
+  transform: rotate(90deg);
+  left: 58%;
+  top: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .navbar {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+}
+
+.header img {
+  z-index: 1;
+  width: 65%;
+}
+
+.location {
+  display: flex;
+  flex-direction: row;
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 2%;
+  margin-top: 3%;
+}
+
+footer p {
+  padding-right: 2%;
 }/*# sourceMappingURL=main.css.map */
